<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/miles_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/miles_input"
        app:layout_constraintEnd_toStartOf="@+id/miles_input" />

    <EditText
        android:id="@+id/miles_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kilo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/kilo_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline2" />

    <EditText
        android:id="@+id/kilo_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/miles_input" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/convert_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kilo_input" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>