<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/bill_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/bill_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/percent_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/percent_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/bill_text" />

    <TextView
        android:id="@+id/people_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/people_text"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/people_input"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/percent_text" />

    <EditText
        android:id="@+id/bill_input"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/percent_input"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number|numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toEndOf="@+id/percent_text"
        app:layout_constraintTop_toBottomOf="@+id/bill_input" />

    <EditText
        android:id="@+id/people_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="number|numberSigned"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/percent_input" />

    <Button
        android:id="@+id/calButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/calculate_button"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_input" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calButton" />
</androidx.constraintlayout.widget.ConstraintLayout>